--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 @font-face {
-    font-family: Tajawal;
-    src: url(../fonts/Tajawal/Tajawal-Regular.ttf);
+    font-family: Almarai;
+    src: url(../fonts/Almarai/Almarai-Regular.ttf);
 }
 
 body {
     direction: rtl;
-    font-family: Tajawal;
+    font-family: Almarai !important ;
     background-color: #f1f1f1 !important;
 }
 
@@ -140,7 +140,8 @@ section.RoundedImageCarousel .carousel .carousel-inner .card {
 }
 section.RoundedImageCarousel  .carousel .carousel-inner .card img {
     border-radius: 50%;
-    width: 75%;
+    width: 100%;
+    height: 100%;
 }
 section.RoundedImageCarousel  .carousel .carousel-inner .card .card-body .card-title {
     font-size: 18px;
@@ -254,5 +255,103 @@ line-height: 25px;
 /*********************
 *********************
 End ProductCarouse
+*********************
+*********************/
+
+
+/*********************
+*********************
+Footer
+*********************
+*********************/
+
+footer .top-footer {
+    background-color: #171717;
+    padding: 75px 0;
+}
+
+footer .top-footer h3 {
+    font-size: 18px;
+    margin-bottom: 30px;
+    color: #c43525;
+    line-height: 45px;
+    position: relative;
+}
+
+footer .top-footer h3::before {
+    content: '';
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width: 35px;
+    height: 2px;
+    background-color: #5c5c5c;
+}
+
+footer .top-footer p {
+    font-size: 15px;
+    color: #919191;
+    line-height: 22px;
+    margin-bottom: 50px;
+}
+
+footer .top-footer ul {
+    padding: 0;
+}
+
+footer .top-footer ul.social li {
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    line-height: 35px;
+    border-radius: 2px;
+    background-color: #333333;
+    margin-right: 5px;
+    transition: all .5s ease;
+    position: relative;
+}
+
+footer .top-footer ul.social li a {
+    color: #ffffff;
+    position: absolute;
+    top: 20%;
+    left: 20%;
+}
+
+footer .top-footer ul.contact-us li {
+    margin-bottom: 35px;
+    font-size: 18px;
+    color: #676767;
+}
+
+footer .top-footer ul.contact-us li:last-of-type {
+    margin-bottom: 0px;
+}
+
+footer .top-footer ul.contact-us li .icons {
+    width: 35px;
+    height: 35px;
+    text-align: center;
+    background-color: #282828;
+    display: inline-block;
+    line-height: 35px;
+    border-radius: 2px;
+    color: #ffffff;
+    margin-left: 20px;
+}
+
+footer .copyright {
+    background-color: #111111;
+}
+
+footer .copyright p {
+    line-height: 78px;
+    font-size: 15px;
+    color: #919191;
+    margin-bottom: 0;
+}
+/*********************
+*********************
+End Footer
 *********************
 *********************/
