--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,10 @@ body {
     font-family: Almarai !important ;
     background-color: #f1f1f1 !important;
 }
+body.productBody{
+    background-color:#ffffff !important;
 
+}
 
 
 
@@ -106,6 +109,7 @@ Pink seperator
     color: #9D296A;
     font-weight: bolder;
     text-align: center;
+    font-size: 20px;
 }
 .PinkSeperator .ShowAll a{
     color: black;
@@ -150,7 +154,7 @@ section.RoundedImageCarousel  .carousel .carousel-inner .card .card-body .card-t
     font-style: italic;
     font-weight: 700;
 }
-section.RoundedImageCarousel .carousel .carousel-control-prev, section.RoundedImageCarousel .carousel .carousel-control-next {
+section.RoundedImageCarousel .carousel .carousel-control-prev, section.RoundedImageCarousel .carousel .carousel-control-next ,.ProductCarouse .carousel .carousel-control-next ,.ProductCarouse .carousel .carousel-control-prev {
     background-color: white;
     border-radius: 5px;
     color: black;
@@ -205,16 +209,21 @@ ProductCarouse
 .ProductCarouse .carousel .carousel-inner .carousel-item .card{
     border: 2px solid #f1f1f1;
     background-color: white;
+    padding: 0px 5px;
+   
+}
+.ProductCarouse .carousel .carousel-inner .carousel-item .card a{
+    text-decoration: none;
 }
 
 .ProductCarouse .carousel .carousel-inner .carousel-item .card h5.card-title {
 font-weight: 600;
 color: #5a5a5a;
-font-size: 18px;
+font-size: 15px;
 line-height: 25px;
 }
 .ProductCarouse .carousel .carousel-inner .carousel-item .card h5.card-title span {
-    font-size: 15px;
+    font-size: 13px;
     color: #a7a7a7;
     font-weight: normal;
 
@@ -223,9 +232,11 @@ line-height: 25px;
     color: rgb(232, 236, 0);
     line-height: 25px;
     margin-bottom: 10px;
+    font-size: 15px;
+
 }
 .ProductCarouse .carousel .carousel-inner .carousel-item .card .card-text .rating .RatingNumber{
-    font-size: 15px;
+    font-size: 13px;
     color: #a7a7a7;
 }
 .ProductCarouse .carousel .carousel-inner .carousel-item .card .card-text .card.CardPrice .Price p.before{
@@ -239,16 +250,16 @@ line-height: 25px;
 }
 .ProductCarouse .carousel .carousel-inner .carousel-item .card .card-text .card.CardPrice .Price p.after{
     color: #c43525;
-    font-size: 18px;
+    font-size: 14px;
     font-weight: bold;
 }
 .ProductCarouse .carousel .carousel-inner .carousel-item .card .card-text .card.CardPrice  .card-body .Sale{
     background-color: #c425c41a;
     border-radius: 20px;
-    width: 70px;
+    width: 50px;
     direction: ltr;
     color: #c43525;
-    font-size: 18px;
+    font-size: 13px;
     font-weight: bold;
     padding: 5px;
 }
@@ -258,6 +269,122 @@ End ProductCarouse
 *********************
 *********************/
 
+/*********************
+*********************
+BreadCrumb
+*********************
+*********************/
+nav.breadcrumb li a,.breadcrumb-item+.breadcrumb-item::before{
+    font-size: 25px;
+    color: black !important;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+/*********************
+*********************
+End BreadCrumb
+*********************
+*********************/
+
+/*********************
+*********************
+Product Description
+*********************
+*********************/
+section.productDescription{
+    border-top: 4px solid rgb(243, 243, 243);
+
+}
+section.productDescription .nav-tabs,section.productDescription .nav-tabs .nav-link{
+    color: rgb(153, 153, 153) ;
+    border: none;
+    font-weight: bolder ;
+    margin-left: 30px;
+    font-size: 17px;
+}
+section.productDescription  .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+    color: black !important;
+    border: none;
+    border-bottom: 3px solid black !important;
+}
+section.productDescription   .tab-content>.active{
+    font-size: 15px;
+    margin-top: 20px;
+    line-height: 30px;
+    color: #676767;
+    font-weight: 450;
+}
+section.productDescription   .tab-content>.active b{
+    color: black;
+}
+/*********************
+*********************
+End Product Description
+*********************
+*********************/
+
+
+/*********************
+*********************
+ Product Details
+*********************
+*********************/
+section.productDetails .carousel .carousel-indicators{
+    position: unset;
+    display: unset;
+    margin-left: 0;
+    margin-bottom: 0;
+     margin-right: 0%;
+}
+section.productDetails .carousel .carousel-indicators button{
+    width: 50px;
+    height: 50px;
+    position: relative;
+}
+section.productDetails .carousel .carousel-indicators button.like{
+    background-color: rgba(0, 174, 255, 0.137);
+    border-radius: 50%;
+    border: none;
+    color: #ED402E;
+    font-size: 20px;
+    margin: 10px 5px;
+}
+section.productDetails .carousel .carousel-indicators button.share{
+    background-color: #a7a7a767;
+    border-radius: 50%;
+    border: none;
+    color: #000000;
+    font-size: 20px;
+    margin-right: 5px;
+    margin-left: 5px;
+}
+section.productDetails .carousel .carousel-indicators button.active{
+    border: 1px solid #ED402E;
+}
+section.productDetails .carousel .carousel-indicators button img{
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 50%;
+    right: 50%;
+    transform: translate(50%,-50%);
+}
+section.productDetails  .addToCart{
+    border-radius: 20px;
+    background-color: #9D296A;
+    color: white;
+    width: 100%;
+    font-weight: bold;
+    margin:15px 0;
+   
+}
+
+/*********************
+*********************
+End Product Details
+*********************
+*********************/
 
 /*********************
 *********************
@@ -355,3 +482,4 @@ footer .copyright p {
 End Footer
 *********************
 *********************/
+
