--- a/css/style.css
+++ b/css/style.css
@@ -239,21 +239,21 @@ line-height: 25px;
     font-size: 13px;
     color: #a7a7a7;
 }
-.ProductCarouse .carousel .carousel-inner .carousel-item .card .card-text .card.CardPrice .Price p.before{
+ .card.CardPrice .Price p.before{
     text-decoration: line-through;
     color: #a7a7a7;;
     font-size: 10px;
     margin-bottom: 0;
 }
-.ProductCarouse .carousel .carousel-inner .carousel-item .card .card-text .card.CardPrice {
-    border: none;
+ .card.CardPrice {
+    border: none !important;
 }
-.ProductCarouse .carousel .carousel-inner .carousel-item .card .card-text .card.CardPrice .Price p.after{
+ .card.CardPrice .Price p.after{
     color: #c43525;
     font-size: 14px;
     font-weight: bold;
 }
-.ProductCarouse .carousel .carousel-inner .carousel-item .card .card-text .card.CardPrice  .card-body .Sale{
+.card.CardPrice  .card-body .Sale{
     background-color: #c425c41a;
     border-radius: 20px;
     width: 50px;
@@ -379,13 +379,72 @@ section.productDetails  .addToCart{
     margin:15px 0;
    
 }
+section.productDetails .deepDetails .card {
+    border: none !important;
+}
+section.productDetails .deepDetails .card  h5.original{
+    font-size: 13px;
+    color: rgb(0, 170, 0);
+    font-weight: bold;
+}
+section.productDetails .deepDetails .card  .moreBrand{
+    font-size: 13px;
+    font-weight: bold;
+    color: #111111;
+}
+section.productDetails .deepDetails .card  .moreBrand span{
+    color: purple;
+}
+section.productDetails .deepDetails  .card.CardPrice .Price p.before{
+    font-size: 22px;
+}
 
+section.productDetails .deepDetails  .card.CardPrice .Price p.after{
+    font-size: 25px;
+}
+section.productDetails .deepDetails  .card.CardPrice  .card-body .Sale{
+    width: 80px;
+    font-size: 25px;
+    text-align: center;
+    
+}
+section.productDetails .deepDetails  .ProductSize .form-check input{
+    background-image: url(../images/faceCream.png);
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    filter: blur(2px);
+  -webkit-filter: blur(2px);
+}
+section.productDetails .deepDetails  .ProductSize .form-check input:checked{
+       filter: blur(0px);
+  -webkit-filter: blur(0px);
+   border: 1px solid black;
+}
+section.productDetails .deepDetails  .ProductSize .form-check input{
+
+/*************
 /*********************
 *********************
 End Product Details
 *********************
 *********************/
-
+.dropdown-menu li {
+    position: relative;
+    }
+    .dropdown-menu .dropdown-submenu {
+    display: none;
+    position: absolute;
+    left: 100%;
+    top: -7px;
+    }
+    .dropdown-menu .dropdown-submenu-left {
+    right: 100%;
+    left: auto;
+    }
+    .dropdown-menu > li:hover > .dropdown-submenu {
+    display: block;
+    }
 /*********************
 *********************
 Footer
