--- a/css/style.css
+++ b/css/style.css
@@ -40,16 +40,18 @@ nav.navbar .navbar-brand {
 nav.navbar .navbar-brand img {
     width: 100%;
 }
-nav.navbar .offcanvas-start ,.offcanvas-start#filter2 ,.offcanvas-start#filter1{
+
+nav.navbar .offcanvas-start, .offcanvas-start#filter2, .offcanvas-start#filter1 {
     width: 100% !important;
     background-color: white !important;
 }
-#offcanvasRightLabel{
+
+#offcanvasRightLabel {
     text-align: right;
 }
 
-#offcanvasRightLabel a img{
-    -webkit-filter: invert(100%); 
+#offcanvasRightLabel a img {
+    -webkit-filter: invert(100%);
     filter: invert(100%);
 }
 
@@ -58,19 +60,21 @@ nav.navbar .offcanvas-start .offcanvas-body {
     background-color: white !important;
 
 }
-nav.navbar .offcanvas-start .offcanvas-body .list-group.One{
+
+nav.navbar .offcanvas-start .offcanvas-body .list-group.One {
     border-top: none;
     border-bottom: 10px solid #f0f0f0;
     margin-bottom: 20px;
 }
-nav.navbar .offcanvas-start .offcanvas-body .list-group.Three{
+
+nav.navbar .offcanvas-start .offcanvas-body .list-group.Three {
     border-bottom: none;
     border-top: 10px solid #e2e2e2;
 }
 
 
 nav.navbar .offcanvas-start .offcanvas-body .list-group-item {
-   text-align: right;
+    text-align: right;
     background-color: transparent;
     border: 1px solid rgba(0, 0, 0, 0.068);
     border-left: none;
@@ -78,7 +82,12 @@ nav.navbar .offcanvas-start .offcanvas-body .list-group-item {
     padding: 10px;
 }
 
-nav.navbar .navbar-nav a.nav-link, nav.navbar .dropdown button,nav.navbar button.SideBar {
+nav.navbar .offcanvas-start .offcanvas-body .list-group-item a {
+    text-decoration: none;
+    color: black;
+}
+
+nav.navbar .navbar-nav a.nav-link, nav.navbar .dropdown button, nav.navbar button.SideBar {
     font-weight: 500;
     font-size: 17px;
     line-height: 25px;
@@ -431,10 +440,12 @@ ProductCarouse
     padding: 0px 5px;
     position: relative;
 }
-section.category .categoryProduct .row{
+
+section.category .categoryProduct .row {
     align-content: center;
     justify-content: space-between;
 }
+
 .ProductCarouse .carousel .carousel-inner .carousel-item .card img, section.category .categoryProduct .card img {
     padding: 10px;
 }
@@ -785,10 +796,12 @@ Filter Accordion
     margin-bottom: 20px;
     padding-right: 15px !important;
 }
-.category .filter  button.btn.d-md-none.d-inline-block{
+
+.category .filter button.btn.d-md-none.d-inline-block {
     box-shadow: none;
 }
-#filter1 li.list-group-item,#filter2 li.list-group-item ,#filter2 .nav-pills .nav-link{
+
+#filter1 li.list-group-item, #filter2 li.list-group-item, #filter2 .nav-pills .nav-link {
     border: none;
     font-size: 15px;
     margin-bottom: 10px;
@@ -796,7 +809,8 @@ Filter Accordion
     text-align: right;
     color: black;
 }
-#filter2 .nav-pills .nav-link.active, .nav-pills .show > .nav-link{
+
+#filter2 .nav-pills .nav-link.active, .nav-pills .show>.nav-link {
     background-color: transparent;
     border: 2px solid #e2e2e2;
     box-shadow: none;
@@ -809,16 +823,20 @@ Filter Accordion
 #filter2 li.list-group-item {
     padding: normal 0;
 }
-#filter1 li.list-group-item .form-check-input{
+
+#filter1 li.list-group-item .form-check-input {
     border-radius: 50%;
- 
+
 }
-h5#filter1label,h5#filter2label{
+
+h5#filter1label, h5#filter2label {
     font-weight: bold;
 }
-.offcanvas-header{
+
+.offcanvas-header {
     border-bottom: 2px solid #e2e2e2;
 }
+
 /*********************
 *********************
 End Filter Accordion 
@@ -872,6 +890,13 @@ categoryProduct
 
 /*End Pagination*/
 
+.refundBody {
+    background-color: white !important;
+}
+
+.refundBody .categoryProduct p {
+    font-size: 13px;
+}
 
 /*********************
 *********************
@@ -884,16 +909,18 @@ End categoryProduct
 Brand 
 *********************
 *********************/
-.brandBody .breadcrumb .breadcrumb-item a,.brandBody .breadcrumb-item+.breadcrumb-item::before{
-    font-size: 20px ;
-    line-height: 50px ;
+.brandBody .breadcrumb .breadcrumb-item a, .brandBody .breadcrumb-item+.breadcrumb-item::before {
+    font-size: 20px;
+    line-height: 50px;
 }
+
 .brandBody .breadcrumb {
     align-content: center;
     justify-content: center;
 }
-.brandBody section.category .categoryProduct .card{
-    width:25%;
+
+.brandBody section.category .categoryProduct .card {
+    width: 25%;
 }
 
 /*********************
@@ -908,53 +935,68 @@ Footer
 *********************
 *********************/
 
-footer.footer .whyUs , footer.footer .youNeedHelp{
+footer.footer .whyUs, footer.footer .youNeedHelp {
     background-color: #F9D9DC;
     position: relative;
 }
-footer.footer .blueLine{
+
+footer.footer .blueLine {
     background-color: #1E224F;
     color: white;
     font-weight: bold;
     width: 20%;
     margin: 0 auto;
     border-radius: 20px;
-    padding:  5px;
+    padding: 5px;
     position: absolute;
     left: 50%;
     top: -5%;
     transform: translateX(-50%);
 }
+
 footer.footer .FooterCards {
     width: 50%;
 }
-footer.footer .FooterCards .card{
+
+footer.footer .carousel-item {
+    padding: 10px;
+    background-color: white;
+}
+
+footer.footer .FooterCards .card {
     border: none;
     padding: 10px;
     width: 50%;
 }
-footer.footer .FooterCards .card img{
+
+footer.footer .FooterCards .card img {
     width: 100%;
 }
-footer.footer .FooterServices .card-group .card{
+
+footer.footer .FooterServices .card-group .card {
     background-color: transparent;
     border: none;
 }
-footer.footer .FooterServices .card-group .card a{
+
+footer.footer .FooterServices .card-group .card a {
     text-decoration: none;
     color: #000000;
 }
-footer.footer .FooterServices .card-group .card img{
+
+footer.footer .FooterServices .card-group .card img {
     width: 50%;
 }
-footer.footer .FooterServices .card-group .card .card-body h5{
+
+footer.footer .FooterServices .card-group .card .card-body h6 {
     font-weight: 800;
 }
-footer.footer .SocialMediaIcons{
+
+footer.footer .SocialMediaIcons {
     background-image: url(../images/bg.webp);
     background-size: cover;
     background-position: center center
 }
+
 footer.footer .SocialMediaIcons li.nav-item {
     width: 70px;
     height: 70px;
@@ -962,17 +1004,20 @@ footer.footer .SocialMediaIcons li.nav-item {
     margin-left: 30px;
     border-radius: 50%;
 }
-footer.footer .SocialMediaIcons li.nav-item a{
+
+footer.footer .SocialMediaIcons li.nav-item a {
     font-size: 35px;
     color: white;
     text-align: center;
     border-radius: 50%;
 }
-footer.footer .SocialMediaIcons li.nav-item:hover,footer.footer .SocialMediaIcons li.nav-item:hover a{
+
+footer.footer .SocialMediaIcons li.nav-item:hover, footer.footer .SocialMediaIcons li.nav-item:hover a {
     color: rgb(180, 180, 180);
     background-color: #681544;
 }
-footer.footer  .copyRight{
+
+footer.footer .copyRight {
     background: linear-gradient(95deg, #fc6c69 0%, #EC4D49 15%, #9E2261 100%);
     text-align: center;
     color: white;
@@ -991,22 +1036,25 @@ End Footer
 Animation
 *********************
 *********************/
-.PinkSeperator,.RoundedImageCarousel,.Cards3Part,.ProductCarouse,.whyUs,.youNeedHelp{
+.PinkSeperator, .RoundedImageCarousel, .Cards3Part, .ProductCarouse, .whyUs, .youNeedHelp {
     position: relative;
     transform: translateX(150px);
     opacity: 0;
-transition: 0.5s all ease;
+    transition: 0.5s all ease;
 }
-.PinkSeperator.active,.RoundedImageCarousel.active,.Cards3Part.active,.ProductCarouse.active,.whyUs.active,.youNeedHelp.active,.FooterCards.active,.FooterServices.active{
-transform: translateX(0);
-opacity: 1;
+
+.PinkSeperator.active, .RoundedImageCarousel.active, .Cards3Part.active, .ProductCarouse.active, .whyUs.active, .youNeedHelp.active, .FooterCards.active, .FooterServices.active {
+    transform: translateX(0);
+    opacity: 1;
 }
-.FooterCards,.FooterServices{
-position: relative;
-transform: translateX(150px);
-opacity: 0;
-transition: 1.5s all ease;
-}  
+
+.FooterCards, .FooterServices {
+    position: relative;
+    transform: translateX(150px);
+    opacity: 0;
+    transition: 1.5s all ease;
+}
+
 /*********************
 *********************
 End ANimation
@@ -1040,16 +1088,18 @@ Media
     nav .navbar-nav {
         display: flex;
         flex-direction: row;
-    
+
     }
-    nav.navbar .navbar-nav a.nav-link{
+
+    nav.navbar .navbar-nav a.nav-link {
         margin-left: 20px;
     }
 
-   
-    nav.navbar .navbar-nav a.nav-link{
+
+    nav.navbar .navbar-nav a.nav-link {
         margin-left: 10px;
     }
+
     section.OfferCarousel .carousel .carousel-control-prev, section.OfferCarousel .carousel .carousel-control-next {
         height: 40px;
         margin: auto 10px;
@@ -1064,9 +1114,11 @@ Media
     .PinkSeperator .ShowAll a {
         font-size: 10px;
     }
-    section.RoundedImageCarousel .carousel .carousel-inner .card{
+
+    section.RoundedImageCarousel .carousel .carousel-inner .card {
         padding: 20px 0;
     }
+
     section.RoundedImageCarousel {
         padding: 0px 0px;
     }
@@ -1086,75 +1138,104 @@ Media
         width: 30px;
         font-size: 11px;
     }
-    section.productDetails .addToCart{
+
+    section.productDetails .addToCart {
         font-size: 12px;
     }
-    section.productDetails .deepDetails .card.CardPrice .Price p.after,section.productDetails .deepDetails .card.CardPrice .Price p.before,.card.CardPrice .card-body{
+
+    section.productDetails .deepDetails .card.CardPrice .Price p.after, section.productDetails .deepDetails .card.CardPrice .Price p.before, .card.CardPrice .card-body {
         text-align: center;
- 
+
     }
+
     section.productDescription .nav-tabs, section.productDescription .nav-tabs .nav-link {
         margin-left: 10px;
         font-size: 16px;
     }
+
     section.productDescription .tab-content>.active {
-        font-size: 11px;        
-    line-height: 25px;
+        font-size: 11px;
+        line-height: 25px;
 
     }
+
     .category .filter .accordion-flush .accordion-item .accordion-button {
         font-size: 9px;
         padding: 10px 0px;
     }
-    .category .filter h6{
+
+    .category .filter h6 {
         font-size: 15px;
     }
+
     .category .filter .accordion-body {
         padding-right: 0px !important;
     }
+
     .category .filter .form-control {
         font-size: 10px;
         padding: 3px;
     }
+
     .category .filter .form-check-input {
         width: 0.7em;
         height: 0.7em;
     }
+
     .category .filter .form-check label.form-check-label {
         font-size: 9px;
     }
-    .category .categoryProduct h3{
+
+    .category .categoryProduct h3 {
         font-size: 20px;
-        
-    } 
-    .category .categoryProduct h3 span .form-select{
+
+    }
+
+    .category .categoryProduct h3 span .form-select {
         width: unset;
     }
-    section.category .categoryProduct .card{
+
+    section.category .categoryProduct .card {
         width: 50% !important;
         padding: 0 5px;
     }
-    section.category .categoryProduct .card h5.card-title,.ProductCarouse .carousel .carousel-inner .carousel-item .card h5.card-title span, section.category .categoryProduct .card h5.card-title span{
+
+    section.category .categoryProduct .card h5.card-title, .ProductCarouse .carousel .carousel-inner .carousel-item .card h5.card-title span, section.category .categoryProduct .card h5.card-title span {
         font-size: 11px;
         line-height: 20px;
     }
+
     section.category .categoryProduct .card .card-text .rating {
         line-height: 20px;
         font-size: 13px;
     }
+
     section.category .categoryProduct .card .card-text .rating .RatingNumber {
         font-size: 11px;
     }
+
     .category .categoryProduct button.AddToCart.btn {
-       font-size:11px ;
+        font-size: 11px;
     }
+
     .card.CardPrice .Price p.after {
-        font-size: 12px;       
+        font-size: 12px;
     }
+
     .card.CardPrice .Price p.before {
         font-size: 9px;
     }
+
     section.category .categoryProduct .card a {
-    border-bottom: 2px solid #80808029;
+        border-bottom: 2px solid #80808029;
+    }
+
+    footer.footer .blueLine {
+        width: 60%;
+        top: -2%;
+    }
+
+    footer.footer .SocialMediaIcons li.nav-item {
+        margin-left: 20px;
     }
 }
