--- a/css/style.css
+++ b/css/style.css
@@ -990,7 +990,7 @@ footer.footer .FooterCards {
 
 footer.footer .carousel-item {
     padding: 10px;
-    background-color: white;
+    background-color:transparent;
 }
 
 footer.footer .FooterCards .card {
