--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,10 @@ nav.navbar .offcanvas-start .offcanvas-body .list-group-item a {
     text-decoration: none;
     color: black;
 }
+.nav-link{
+    text-align: center;
+    justify-content: center !important;
+}
 
 nav.navbar .navbar-nav a.nav-link, nav.navbar .dropdown button, nav.navbar button.SideBar {
     font-weight: 500;
