--- a/css/style.css
+++ b/css/style.css
@@ -1279,7 +1279,7 @@ Media
         transition: none;
     }
     .nav-link{
-        margin-top:5px ;
+        margin-top:5px !important ;
     }
 }
 @media (max-width: 575px) {
