--- a/css/style.css
+++ b/css/style.css
@@ -1269,7 +1269,8 @@ Media
     footer.footer .blueLine {
         width: 60%;
         top: -2%;
-        padding: 10px 5px;
+        padding: 10px 5px 5px 5px;
+
     }
 
     footer.footer .SocialMediaIcons li.nav-item {
@@ -1280,8 +1281,11 @@ Media
         opacity: 1;
         transition: none;
     }
-    .nav-link,nav.navbar button.SideBar ,section.productDetails .carousel .carousel-indicators button.like , section.productDetails .carousel .carousel-indicators button.share{
+    nav.navbar button.SideBar ,section.productDetails .carousel .carousel-indicators button.like , section.productDetails .carousel .carousel-indicators button.share{
         padding-top:10px !important ;
+    }
+    .nav-link{
+        padding-top: 15px;
     }
 }
 @media (max-width: 575px) {
