--- a/css/style.css
+++ b/css/style.css
@@ -1285,7 +1285,7 @@ Media
         padding-top:10px !important ;
     }
     .nav-link{
-        margin-top: 8px;
+        margin-top: 10px !important;
     }
 }
 @media (max-width: 575px) {
